--- a/.github/workflows/update-news.yml
+++ b/.github/workflows/update-news.yml
@@ -25,7 +25,7 @@ jobs:
         run: npm ci
       
       - name: Update news
-        run: node scripts/update-news.mjs
+        run: npm run update-news
         env:
           NEWS_API_KEY: ${{ secrets.NEWS_API_KEY }}
 
